[LAB-92][Source Code][Addition of verifications of vehicle and user existence]