@@ -6,11 +6,15 @@ import com.rabbitmq.client.Channel;
 import com.rabbitmq.client.Connection;
 import com.rabbitmq.client.ConnectionFactory;
 import labdsoft.payments_bo_mcs.model.priceTable.PriceTableEntry;
+import labdsoft.payments_bo_mcs.model.priceTable.ThresholdCost;
+import org.springframework.boot.configurationprocessor.json.JSONArray;
+import org.springframework.boot.configurationprocessor.json.JSONObject;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpResponse;
@@ -40,8 +44,8 @@ public class Publish {
 
     public static List<PriceTableEntry> getPriceTablePark(String exchangeName, String message, String host) throws Exception {
         try {
-            String apiUrl = "https://api.example.com/data";
-            URL url = new URL(apiUrl);
+            String apiUrl = "localhost/parks/getAllPriceTableEntries/" + message;
+            URL url = URI.create(apiUrl).toURL();
 
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
 
@@ -59,16 +63,41 @@ public class Publish {
                     responseContent.append(line);
                 }
 
-                // Manually parse the JSON response to List<PriceTableEntry>
-                // Implement your JSON parsing logic here
+                // Manually parse JSON response
+                JSONArray jsonArray = new JSONArray(responseContent.toString());
 
-                return null; // Replace with your actual parsing logic
+                for (int i = 0; i < jsonArray.length(); i++) {
+                    JSONObject jsonObject = jsonArray.getJSONObject(i);
+
+                    // Extract data from the JSON object and create PriceTableEntry
+                    Long parkId = jsonObject.getLong("parkId");
+                    String periodStart = jsonObject.getString("periodStart");
+                    String periodEnd = jsonObject.getString("periodEnd");
+
+                    // Process the thresholds array
+                    ArrayList<ThresholdCost> thresholds = new ArrayList<>();
+                    JSONArray thresholdsArray = jsonObject.getJSONArray("thresholds");
+                    for (int j = 0; j < thresholdsArray.length(); j++) {
+                        JSONObject thresholdObject = thresholdsArray.getJSONObject(j);
+
+                        int thresholdMinutes = jsonObject.getInt("thresholdMinutes");
+                        double costPerMinuteAutomobiles = jsonObject.getDouble("costPerMinuteAutomobiles");
+                        double costPerMinuteMotorcycles = jsonObject.getDouble("costPerMinuteMotorcycles");
+
+                        thresholds.add(new ThresholdCost(thresholdMinutes, costPerMinuteAutomobiles, costPerMinuteMotorcycles));
+                    }
+
+                    // Create PriceTableEntry and add to the list
+                    PriceTableEntry entry = new PriceTableEntry(parkId, periodStart, periodEnd, thresholds);
+                    entries.add(entry);
+                }
             }
 
-            return entries;
             connection.disconnect();
+            return entries;
         } catch (IOException e) {
             e.printStackTrace();
+            return new ArrayList<>();
         }
     }
 }
